# app/Http/Controllers/AuthController.php
@@ -17,6 +17,35 @@ class AuthController extends Controller
         $this->authService = $authService;
     }
 
+    /**
+     * @OA\Post(
+     *      path="/liberfly/register",
+     *      operationId="createUser",
+     *      tags={"Auth"},
+     *      summary="User register",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              @OA\Property(property="name", type="string"),
+     *              @OA\Property(property="email", type="string"),
+     *              @OA\Property(property="password", type="string"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(
+     *                  @OA\Property(property="id", type="integer"),
+     *                  @OA\Property(property="name", type="string"),
+     *                  @OA\Property(property="email", type="string"),
+     *                  @OA\Property(property="created_at", type="string")
+     *              )
+     *          )
+     *      )
+     * )
+     */
     public function register(AuthRegisterRequest $request)
     {
         $input = $request->validated();
@@ -29,6 +58,37 @@ class AuthController extends Controller
         // Retorna o usuário registrado
     }
 
+
+    /**
+     * @OA\Post(
+     *      path="/liberfly/login",
+     *      operationId="logginUser",
+     *      tags={"Auth"},
+     *      summary="User login",
+     *       @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              @OA\Property(property="email", type="string"),
+     *              @OA\Property(property="password", type="string"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              type="array",
+     *              @OA\Items(
+     *                  @OA\Property(property="id", type="integer"),
+     *                  @OA\Property(property="name", type="string"),
+     *                  @OA\Property(property="email", type="string"),
+     *                  @OA\Property(property="created_at", type="string"),
+     *                  @OA\Property(property="access_token", type="string"),
+     *                  @OA\Property(property="token_type", type="string")
+     *              )
+     *          )
+     *      )
+     * )
+     */
     public function login(AuthLoginRequest $request)
     {
         $input = $request->validated();
